--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "atk4/data": "dev-develop",
-        "zendframework/zend-diactoros": "^1.6"
+        "atk4/data": "1.3.7",
+        "zendframework/zend-diactoros": "^2.0",
+        "zendframework/zend-httphandlerrunner": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "<6",
+        "phpunit/phpunit": "^5",
         "atk4/schema": "dev-develop",
         "codeclimate/php-test-reporter": "*"
     },
