--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "atk4/api",
     "type": "library",
-    "description": "Agile API - Extensible API server in PHP for Agile Data",
+    "description": "Agile API - REST API server for atk4/data",
     "keywords": ["framework", "api", "rest", "restapi", "atk", "agile data", "data", "json", "toolkit", "agile"],
     "homepage": "https://github.com/atk4/api",
     "license": "MIT",
@@ -15,14 +15,10 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "atk4/data": "1.3.7",
-        "zendframework/zend-diactoros": "^2.0",
-        "zendframework/zend-httphandlerrunner": "^1.0"
+        "php": ">=7.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
-        "atk4/schema": "dev-develop",
+        "phpunit/phpunit": "^9",
         "codeclimate/php-test-reporter": "*"
     },
     "autoload": {
