--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,37 @@
 language: php
-
 php:
-    - '7.3'
     - '7.4'
-
 cache:
   directories:
     - $HOME/.composer/cache
-
 #services:
 #    - mysql
-
 before_script:
     - composer install
 #    - mysql -e 'create database dsql_test;'
-
 after_script:
     - echo $TRAVIS_PHP_VERSION
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.3" ]]; then echo "Sending codecov report"; bash <(curl -s https://codecov.io/bash); fi
-
+    - echo "Sending codecov report"; bash <(curl -s https://codecov.io/bash);
 script:
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} != "7.4" ]]; then NC="--no-coverage"; fi
     - ./vendor/phpunit/phpunit/phpunit $NC
 
-notifications:
-    urls:
-      - https://webhooks.gitter.im/e/b33a2db0c636f34bafa9
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
-
-    slack:
-        rooms:
-            - agiletoolkit:bjrKuPBf1h4cYiNxPBQ1kF6c#dsql
-        on_success: change
-
-    urls:
-      - https://webhooks.gitter.im/e/c4000ab24556b09cb3e7
-
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
-
-    email: false
+#notifications:
+#    urls:
+#      - https://webhooks.gitter.im/e/b33a2db0c636f34bafa9
+#    on_success: change  # options: [always|never|change] default: always
+#    on_failure: always  # options: [always|never|change] default: always
+#    on_start: never     # options: [always|never|change] default: always
+#
+#    slack:
+#        rooms:
+#            - agiletoolkit:bjrKuPBf1h4cYiNxPBQ1kF6c#dsql
+#        on_success: change
+#
+#    urls:
+#      - https://webhooks.gitter.im/e/c4000ab24556b09cb3e7
+#
+#    on_success: change  # options: [always|never|change] default: always
+#    on_failure: always  # options: [always|never|change] default: always
+#    on_start: never     # options: [always|never|change] default: always
+#
+#    email: false
