--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,19 @@
   "name": "funyx/api",
   "prefer-stable": true,
   "require": {
-	"php": ">=7.4.0"
+	"php": ">=7.4.0",
+    "atk4/data": "^2.2",
+	"ext-json": "7.*"
   },
   "require-dev": {
-	"phpunit/phpunit": ">=9.0"
+	"phpunit/phpunit": ">=9.0",
+    "phalcon/devtools": "^4.0"
   },
-  "type": "project"
+  "type": "project",
+  "scripts": {
+	"start-dev" : [
+	  "Composer\\Config::disableProcessTimeout",
+	  "make env=dev server"
+	]
+  }
 }
