--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   ],
   "autoload": {
 	"psr-4": {
-	  "funyx\\api\\": "src/"
+	  "funyx\\api\\": "src/",
+	  "demo\\api\\": "phalcon/app/"
 	}
   },
   "autoload-dev": {
@@ -30,7 +31,8 @@
   "require": {
 	"php": ">=7.4.0",
     "atk4/data": "^2.2",
-	"ext-json": "7.*"
+	"ext-json": "7.*",
+    "mtdowling/jmespath.php": "^2.6"
   },
   "require-dev": {
 	"phpunit/phpunit": ">=9.0",
@@ -38,13 +40,17 @@
   },
   "type": "project",
   "scripts": {
-	"start-dev" : [
+	"start-live" : [
 	  "Composer\\Config::disableProcessTimeout",
 	  "make env=dev server"
 	],
 	"start" : [
 	  "Composer\\Config::disableProcessTimeout",
 	  "make env=dev server-static"
+	],
+	"test" : [
+	  "Composer\\Config::disableProcessTimeout",
+	  "make env=test test"
 	]
   }
 }
