--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,13 @@
 	"php": ">=7.4.0",
     "atk4/data": "^2.2",
 	"ext-json": "7.*",
-    "mtdowling/jmespath.php": "^2.6"
+    "mtdowling/jmespath.php": "^2.6",
+    "psr/http-message": "^1.0",
+    "psr/http-server-middleware": "^1.0",
+    "fig/http-message-util": "^1.1",
+    "psr/http-factory": "^1.0",
+    "psr/http-client": "^1.0",
+    "firebase/php-jwt": "^5.2"
   },
   "require-dev": {
 	"phpunit/phpunit": ">=9.0",
