--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,16 @@
   "prefer-stable": true,
   "require": {
 	"php": ">=7.4.0",
-    "atk4/data": "^2.2",
-	"ext-json": "7.*",
+	"ext-json": ">=7.4.0",
+	"ext-phalcon": ">=4.0",
     "mtdowling/jmespath.php": "^2.6",
     "psr/http-message": "^1.0",
     "psr/http-server-middleware": "^1.0",
     "fig/http-message-util": "^1.1",
     "psr/http-factory": "^1.0",
     "psr/http-client": "^1.0",
-    "firebase/php-jwt": "^5.2"
+    "firebase/php-jwt": "^5.2",
+    "atk4/data": "^2.2"
   },
   "require-dev": {
 	"phpunit/phpunit": ">=9.0",
